tests/__snapshots__/api-toAcceptProps-special-cases-stderr.snap.txt
Error: Component accepts props of the given type.

  16 | 
  17 |     expect(OneOrTheOther).type.toAcceptProps({ one: "Pass" });
  18 |     expect(OneOrTheOther).type.not.toAcceptProps({ one: "Pass" }); // fail
     |                                    ~~~~~~~~~~~~~
  19 | 
  20 |     expect(OneOrTheOther).type.toAcceptProps({ two: "Pass" });
  21 |     expect(OneOrTheOther).type.not.toAcceptProps({ two: "Pass" }); // fail

       at ./__typetests__/special-cases.tst.tsx:18:36 ❭ special cases ❭ when the 'props' is a union

Error: Component accepts props of the given type.

  19 | 
  20 |     expect(OneOrTheOther).type.toAcceptProps({ two: "Pass" });
  21 |     expect(OneOrTheOther).type.not.toAcceptProps({ two: "Pass" }); // fail
     |                                    ~~~~~~~~~~~~~
  22 | 
  23 |     expect(OneOrTheOther).type.not.toAcceptProps({ one: "Fail", two: "Fail" });
  24 |     expect(OneOrTheOther).type.toAcceptProps({ one: "Fail", two: "Fail" }); // fail

       at ./__typetests__/special-cases.tst.tsx:21:36 ❭ special cases ❭ when the 'props' is a union

Error: Component does not accept props of the given type.

Type '{ one: string; two: string; }' is not assignable to type 'IntrinsicAttributes & (One | Other)'.
Types of property 'two' are incompatible.
Type 'string' is not assignable to type 'undefined'.

  22 | 
  23 |     expect(OneOrTheOther).type.not.toAcceptProps({ one: "Fail", two: "Fail" });
  24 |     expect(OneOrTheOther).type.toAcceptProps({ one: "Fail", two: "Fail" }); // fail
     |                                ~~~~~~~~~~~~~
  25 | 
  26 |     expect(OneOrTheOther).type.not.toAcceptProps({});
  27 |     expect(OneOrTheOther).type.toAcceptProps({}); // fail

       at ./__typetests__/special-cases.tst.tsx:24:32 ❭ special cases ❭ when the 'props' is a union

Error: Component does not accept props of the given type.

Type '{}' is not assignable to type 'IntrinsicAttributes & (One | Other)'.

  25 | 
  26 |     expect(OneOrTheOther).type.not.toAcceptProps({});
  27 |     expect(OneOrTheOther).type.toAcceptProps({}); // fail
     |                                ~~~~~~~~~~~~~
  28 | 
  29 |     expect(OneOrTheOther).type.not.toAcceptProps({ three: false });
  30 |     expect(OneOrTheOther).type.toAcceptProps({ three: false }); // fail

       at ./__typetests__/special-cases.tst.tsx:27:32 ❭ special cases ❭ when the 'props' is a union

Error: Component does not accept props of the given type.

Type '{ three: boolean; }' is not assignable to type 'IntrinsicAttributes & (One | Other)'.
Property 'three' does not exist on type 'IntrinsicAttributes & (One | Other)'.

  28 | 
  29 |     expect(OneOrTheOther).type.not.toAcceptProps({ three: false });
  30 |     expect(OneOrTheOther).type.toAcceptProps({ three: false }); // fail
     |                                                ~~~~~
  31 |   });
  32 | 
  33 |   test("when component requires children", () => {

       at ./__typetests__/special-cases.tst.tsx:30:48 ❭ special cases ❭ when the 'props' is a union

Error: Component accepts props of the given type.

  47 | 
  48 |     expect(Card).type.toAcceptProps({ title: "Hello", children: "Click me" });
  49 |     expect(Card).type.not.toAcceptProps({ title: "Hello", children: "Click me" }); //fail
     |                           ~~~~~~~~~~~~~
  50 | 
  51 |     expect(Card).type.toAcceptProps({ title: "Hello", children: <span>Click me</span> });
  52 |     expect(Card).type.not.toAcceptProps({ title: "Hello", children: <span>Click me</span> }); // fail

       at ./__typetests__/special-cases.tst.tsx:49:27 ❭ special cases ❭ when component requires children

Error: Component accepts props of the given type.

  50 | 
  51 |     expect(Card).type.toAcceptProps({ title: "Hello", children: <span>Click me</span> });
  52 |     expect(Card).type.not.toAcceptProps({ title: "Hello", children: <span>Click me</span> }); // fail
     |                           ~~~~~~~~~~~~~
  53 | 
  54 |     expect(Card).type.not.toAcceptProps({ title: "Hello" });
  55 |     expect(Card).type.toAcceptProps({ title: "Hello" }); // fail

       at ./__typetests__/special-cases.tst.tsx:52:27 ❭ special cases ❭ when component requires children

Error: Component does not accept props of the given type.

Property 'children' is missing in type '{ title: string; }' but required in type 'CardProps'.

  53 | 
  54 |     expect(Card).type.not.toAcceptProps({ title: "Hello" });
  55 |     expect(Card).type.toAcceptProps({ title: "Hello" }); // fail
     |                       ~~~~~~~~~~~~~
  56 | 
  57 |     expect(Card).type.not.toAcceptProps({});
  58 |     expect(Card).type.toAcceptProps({}); // fail

       at ./__typetests__/special-cases.tst.tsx:55:23 ❭ special cases ❭ when component requires children

    'children' is declared here. ts(2728)

      34 |     interface CardProps {
      35 |       title: string;
      36 |       children: ReactNode;
         |       ~~~~~~~~
      37 |     }
      38 | 
      39 |     function Card({ title, children }: CardProps) {

           at ./__typetests__/special-cases.tst.tsx:36:7

Error: Component does not accept props of the given type.

Type '{}' is missing the following properties from type 'CardProps': title, children

  56 | 
  57 |     expect(Card).type.not.toAcceptProps({});
  58 |     expect(Card).type.toAcceptProps({}); // fail
     |                       ~~~~~~~~~~~~~
  59 |   });
  60 | });
  61 | 

       at ./__typetests__/special-cases.tst.tsx:58:23 ❭ special cases ❭ when component requires children

